--- a/bin/bookList.fxml
+++ b/bin/bookList.fxml
@@ -3,13 +3,22 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfaz.Books">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="402.0" prefWidth="443.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfaz.Books">
    <children>
-      <Label layoutX="270.0" layoutY="34.0" text="ALL BOOKS" />
-      <TextArea fx:id="booklist" editable="false" layoutX="200.0" layoutY="78.0" prefHeight="200.0" prefWidth="200.0" />
-      <Button fx:id="back" layoutX="455.0" layoutY="311.0" mnemonicParsing="false" onAction="#back" prefHeight="37.0" prefWidth="70.0" text="back" />
+      <Label layoutX="191.0" layoutY="27.0" text="ALL BOOKS" textFill="#f50707" />
+      <TextArea fx:id="list" editable="false" layoutX="200.0" layoutY="78.0" prefHeight="200.0" prefWidth="200.0" />
+      <Button fx:id="back" layoutX="331.0" layoutY="316.0" mnemonicParsing="false" onAction="#back" prefHeight="37.0" prefWidth="70.0" text="back" />
+      <Button fx:id="horror" layoutX="60.0" layoutY="101.0" mnemonicParsing="false" onAction="#horror" prefHeight="25.0" prefWidth="61.0" text="Horror" />
+      <Button fx:id="comedi" layoutX="60.0" layoutY="166.0" mnemonicParsing="false" onAction="#comedi" prefHeight="25.0" prefWidth="61.0" text="comedi" />
+      <Button fx:id="action" layoutX="60.0" layoutY="226.0" mnemonicParsing="false" onAction="#action" prefHeight="25.0" prefWidth="61.0" text="action" />
+      <ImageView fitHeight="112.0" fitWidth="200.0" layoutX="14.0" layoutY="279.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../shutterstock_522019972.jpg" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
